[gd_scene load_steps=5 format=3 uid="uid://buos6ae1qvw78"]

[ext_resource type="Script" path="res://Assets/Script/Controller/UI/Exit_Confirmation/Exit Confirmation.gd" id="1_fief4"]
[ext_resource type="Theme" uid="uid://br2uoqpi38ygc" path="res://Assets/Theme/Dialouge/Exit_Confirmation.tres" id="2_0k7ty"]
[ext_resource type="AudioStream" uid="uid://c8ygb4nqbs03p" path="res://Assets/Music/Warning/exclamation-101soundboards.mp3" id="3_ct1th"]
[ext_resource type="AudioStream" uid="uid://ty2bg0clrp0t" path="res://Assets/Music/All Button/Quit_Button.mp3" id="4_87xpo"]

[node name="ExitConfirmation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fief4")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = ""
initial_position = 1
size = Vector2i(685, 200)
visible = true
unresizable = true
borderless = true
max_size = Vector2i(1280, 720)
theme = ExtResource("2_0k7ty")
ok_button_text = "Yes"
dialog_text = " Are you sure want exit the game?"
dialog_close_on_escape = false
cancel_button_text = "No"

[node name="Warning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ct1th")
bus = &"Sound Effects"

[node name="Button_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_87xpo")
bus = &"Sound Effects"
area_mask = 2

[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
